--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
 .App {
+  font-family: monospace;
   text-align: center;
+  padding: 20px;
+  max-width: 700px;
+  margin: auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ascii {
+  white-space: pre;
+  line-height: 7px;
+  font-size: 8px;
+  background: #000;
+  color: #0f0;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 8px;
+  overflow-x: auto;
 }
