--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   line-height: 7px;
   font-size: 8px;
   background: #000;
-  color: #0f0;
+  color: white;
   padding: 10px;
   margin-top: 20px;
   border-radius: 8px;
